# Multi-Agent-Custom-Automation-Engine-Solution-Accelerator

./: .auto-claude-status  .coveragerc  .flake8  .gitignore  .last_backend_tag  AGENT_CREATION_FIX.md  BACKEND_WARNINGS_FIXED.md  CICD_SETUP_GUIDE.md  DATASET_AUTO_DISCOVERY_IMPLEMENTED.md  DATASET_DELETE_FIX.md  DATASET_FIXES_IMPLEMENTED.md  FINAL_FIX_404.md  FIX_AZURE_CLI_PATH.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_DEV_GUIDE.md  MCP_CONFIGURATION_FIXED.md  Multi-Agent-Custom-Automation-Engine-Solution-Accelerator.code-workspace  PLATFORM_DEPLOYMENT_COMPLETE.md  QUICK_FIX_NOW.md  QUICK_REFERENCE.md  QUICK_START_BACKEND.md  README.md  RESTART_INSTRUCTIONS.md  SIMPLE_UI_IMPLEMENTATION.md  SPRINT_PROGRESS_SUMMARY.md  TEAM_SELECTOR_GUIDE.md  TESTING.md  TESTING_INSTRUCTIONS.md  TEST_CICD.md  TRANSPARENCY_FAQS.md  agents.md  azure.yaml  azure_custom.yaml  body.json  conftest.py  deploy_to_azure.ps1  deploy_to_azure.sh  generate_exec_summary.py  index_datasets.py  (+13 more)
src/App/: .acrignore  .dockerignore  Dockerfile  frontend_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts  vitest.config.ts
src/App/src/: App.tsx  index.tsx
src/App/src/api/: apiClient.tsx  apiService.tsx  apiUtils.ts  config.tsx  httpClient.ts  index.tsx
src/App/src/commonComponents/modules/: Chat.tsx  ChatExample.tsx  ChatInput.tsx
src/App/src/components/auth/: LoginButton.tsx
src/App/src/components/common/: PlanTimeoutDialog.tsx  ProcessingStatusIndicator.tsx  TeamSelector.tsx
src/App/src/components/content/: HomeInput.tsx  PlanChat.tsx  PlanChatBody.tsx  PlanPanelLeft.tsx  PlanPanelRight.tsx  TaskList.tsx
src/App/src/hooks/: useAutoScroll.tsx  usePlanActions.tsx  usePlanWebSocket.tsx  useTeamSelection.tsx  useWebSocket.tsx
src/App/src/models/: plan.tsx  planPanelLeft.tsx  taskDetails.tsx  taskList.tsx
src/App/src/pages/: HomePage.tsx  PlanPage.tsx
src/App/src/store/: PlanDataService.tsx  TeamService.tsx  WebSocketService.tsx  hooks.ts  index.ts  store.ts
src/App/src/store/slices/: appSlice.ts  chatSlice.ts  planSlice.ts  streamingSlice.ts  (+1 more)
src/App/src/styles/: HomeInput.css  PlanPanelLeft.css
src/App/src/utils/: agentIconUtils.tsx  index.ts  jsonFormatter.ts  messageUtils.ts  utils.tsx
src/backend/: .env.sample  01_create_agents.py  BRANCH_REPORT_README.md  Dockerfile  Dockerfile.NoCache  README.md  app.py  app_config.py  app_kernel.py  app_logs.txt  config.py  create_env.ps1  diagnose_foundry.py  event_utils.py  generate_branch_report.py  generate_sample_branch_report.py  pyproject.toml  requirements.txt  test_complete_flow.py  test_rai_manual.py  test_rai_simple.py  utils.py  utils_kernel.py
src/backend/af/api/: router.py
src/backend/af/callbacks/: response_handlers.py
src/backend/af/config/: settings.py
src/backend/af/magentic_agents/: foundry_agent.py  magentic_agent_factory.py  proxy_agent.py  reasoning_agent.py  reasoning_search.py
src/backend/af/models/: messages.py  orchestration_models.py
src/backend/af/orchestration/: human_approval_manager.py  orchestration_manager.py
src/backend/agents/: __init__.py  agent_factory.py  agent_template.py  base_agent.py  group_chat_manager.py  human.py  image_agent.py  planner.py  proxy_agent.py
src/backend/api/: router.py
src/backend/auth/: auth_utils.py  sample_user.py
src/backend/callbacks/: response_handlers.py
src/backend/common/config/: app_config.py
src/backend/common/database/: cosmosdb.py  database_base.py  database_factory.py
src/backend/common/models/: messages.py  messages_af.py  messages_kernel.py
src/backend/common/utils/: advanced_forecasting.py  agent_name_sanitizer.py  agent_utils.py  customer_analytics.py  dataset_utils.py  github_excel_generator.py  github_excel_generator_mcp.py  markdown_utils.py  marketing_analytics.py  operations_analytics.py  otlp_tracing.py  pricing_analytics.py  team_utils.py  utils_af.py  utils_agents.py  utils_kernel.py
src/backend/config/: __init__.py  agent_registry.py  azure_config.py  mcp_config.py
src/backend/context/: cosmos_memory_kernel.py
src/backend/kernel_agents/: agent_base.py  agent_factory.py  group_chat_manager.py  planner_agent.py  simple_chat_agent.py
src/backend/kernel_tools/: kernel_initializer.py  product_tools.py  sk_function_tool.py
src/backend/middleware/: health_check.py
src/backend/models/: __init__.py  messages.py  messages_kernel.py  plan_models.py
src/backend/orchestration/: __init__.py  connection_config.py  human_approval_manager.py  orchestration_manager.py  patches.py  plan_review_helpers.py  user_interaction_agent.py
src/backend/orchestration/helper/: __init__.py  plan_to_mplan_converter.py
src/backend/patches/: magentic_duplicate_fc_id.py  tool_history_leak.py
src/backend/services/: mcp_service.py  plan_service.py  team_service.py
src/backend/tests/: README.md  conftest.py  test_advanced_forecasting.py  test_agent_base_summary.py  test_app.py  test_chat_endpoint.py  test_config.py  test_customer_analytics.py  test_marketing_analytics.py  test_operations_analytics.py  test_pricing_analytics.py  test_simple_chat_agent.py  test_team_specific_methods.py
src/backend/tests/models/: test_messages.py
src/backend/tools/: clarification_tool.py
src/backend/v3/api/: analytics_endpoints.py  router.py
src/backend/v3/magentic_agents/: foundry_agent.py  magentic_agent_factory.py
src/backend/v3/models/: messages.py
src/backend/v3/orchestration/: human_approval_manager.py  orchestration_manager.py
src/backend/v4/: __init__.py
src/backend/v4/api/: __init__.py  router.py
src/backend/v4/callbacks/: response_handlers.py
src/backend/v4/common/: __init__.py
src/backend/v4/config/: agent_registry.py  settings.py
src/backend/v4/magentic_agents/: __init__.py  foundry_agent.py  image_agent.py  magentic_agent_factory.py  proxy_agent.py  reasoning_agent.py  reasoning_search.py
src/backend/v4/models/: __init__.py  messages.py  models.py  orchestration_models.py
src/backend/v4/orchestration/: exceptions.py  human_approval_manager.py  orchestration_manager.py
(+699 files in other folders)
