[project]
name = "frontend-react"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]>=0.38.0",
    "jinja2",
    "azure-identity",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.31",
    "urllib3==2.7.0",
]
