[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-evaluation==1.16.5",
    "azure-ai-inference==1.0.0b9",
    "azure-ai-projects==2.0.1",
    "azure-ai-agents==1.2.0b6",
    "azure-cosmos==4.15.0",
    "azure-identity==1.25.3",
    "azure-monitor-events-extension==0.1.0",
    "azure-monitor-opentelemetry==1.8.7",
    "azure-search-documents==11.6.0",
    "fastapi==0.135.3",
    "openai==2.31.0",
    "opentelemetry-api==1.41.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.41.0",
    "opentelemetry-exporter-otlp-proto-http==1.41.0",
    "opentelemetry-instrumentation-fastapi==0.62b0",
    "opentelemetry-instrumentation-openai==0.59.0",
    "opentelemetry-sdk==1.41.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.26",
    "semantic-kernel==1.41.2",
    "uvicorn==0.44.0",
    "pylint-pydantic==0.4.1",
    "pexpect==4.9.0",
    "mcp==1.27.0",
    "werkzeug==3.1.8",
    "azure-core==1.39.0",
    "agent-framework>=1.0.1",
]
