[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-evaluation==1.16.6",
    "azure-ai-inference==1.0.0b9",
    "azure-ai-projects==2.1.0",
    "azure-cosmos==4.15.0",
    "azure-identity==1.25.3",
    "azure-monitor-events-extension==0.1.0",
    "azure-monitor-opentelemetry==1.8.7",
    "azure-search-documents==11.6.0",
    "fastapi==0.136.1",
    "openai==2.33.0",
    "opentelemetry-api==1.41.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.41.1",
    "opentelemetry-exporter-otlp-proto-http==1.41.1",
    "opentelemetry-instrumentation-fastapi==0.62b1",
    "opentelemetry-instrumentation-openai==0.60.0",
    "opentelemetry-sdk==1.41.1",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.27",
    "uvicorn==0.46.0",
    "pylint-pydantic==0.4.1",
    "pexpect==4.9.0",
    "mcp==1.27.0",
    "werkzeug==3.1.8",
    "azure-core==1.40.0",
    "agent-framework-azure-ai==1.0.0rc6",
    "agent-framework-core==1.2.2",
    "agent-framework-orchestrations==1.0.0b260429",
    "urllib3==2.6.3",
    "protobuf==7.34.1",
    "cryptography==47.0.0",
    "aiohttp==3.13.5",
    "pyasn1==0.6.3",
    "nltk==3.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
]